# formula_1_grand_prix

./: CMakeLists.txt  career.c  career.h  configuration.h  file.h  game.c  game.h  main.c  menu.h  program.h
configuration/: configuration.c  configuration.h
file/: file.c  file.h
interface/: interface.c  interface.h
models/: base.h  car.h  championship.h  gps.h  pieces.h  player.h  racer.h
race/: race.c  race.h
